fix overflow mobile device

--- a/scss/Base/_reset.scss
+++ b/scss/Base/_reset.scss
@@ -2,6 +2,7 @@ html {
   font-size: 100%;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  overflow: hidden;
 }
 
 ::selection {
@@ -23,4 +24,5 @@ body {
   line-height: 1.3;
   font-family: 'Poppins', sans-serif;
   cursor: none;
+  overflow: hidden;
 }
